[gd_scene load_steps=3 format=3 uid="uid://dp5er4js6hdix"]

[ext_resource type="FontFile" uid="uid://xof25rhshcrp" path="res://assets/KodeMono-VariableFont_wght.ttf" id="1_6piqe"]
[ext_resource type="Script" path="res://UI/GUI.gd" id="1_ushxi"]

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_ushxi")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Rows" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopRow" type="HBoxContainer" parent="MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0

[node name="MiddleRow" type="HBoxContainer" parent="MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 50.0

[node name="BottomRow" type="HBoxContainer" parent="MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0

[node name="HealthSection" type="CenterContainer" parent="MarginContainer/Rows/BottomRow"]
layout_mode = 2

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/Rows/BottomRow/HealthSection"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_vertical = 4
value = 100.0
show_percentage = false

[node name="AmmoSection" type="HBoxContainer" parent="MarginContainer/Rows/BottomRow"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="CurrentAmmo" type="Label" parent="MarginContainer/Rows/BottomRow/AmmoSection"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6piqe")
theme_override_font_sizes/font_size = 40
text = "30"

[node name="AmmoSep" type="Label" parent="MarginContainer/Rows/BottomRow/AmmoSection"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6piqe")
theme_override_font_sizes/font_size = 40
text = "/"

[node name="TotalAmmo" type="Label" parent="MarginContainer/Rows/BottomRow/AmmoSection"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6piqe")
theme_override_font_sizes/font_size = 60
text = "30"
